Refactor 'plugin helpers' to use CUIThemeFile

--- a/Core/Interfaces/Interfaces.vcxproj
+++ b/Core/Interfaces/Interfaces.vcxproj
@@ -45,13 +45,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">
-    <OutDir>.\Unicode_Release\</OutDir>
-    <IntDir>.\Unicode_Release\</IntDir>
+    <OutDir>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Release\</OutDir>
+    <IntDir>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Release\</IntDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">
-    <OutDir>.\Unicode_Debug\</OutDir>
-    <IntDir>.\Unicode_Debug\</IntDir>
+    <OutDir>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Debug\</OutDir>
+    <IntDir>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">
@@ -64,10 +64,10 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;WIN32;_WINDOWS;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AssemblerListingLocation>.\Unicode_Release\</AssemblerListingLocation>
+      <AssemblerListingLocation>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Release\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Unicode_Release\Interfaces.pch</PrecompiledHeaderOutputFile>
-      <ObjectFileName>.\Unicode_Release\</ObjectFileName>
-      <ProgramDataBaseFileName>.\Unicode_Release\</ProgramDataBaseFileName>
+      <ObjectFileName>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Release\</ObjectFileName>
+      <ProgramDataBaseFileName>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Release\</ProgramDataBaseFileName>
     </ClCompile>
     <ResourceCompile>
       <Culture>0x0c09</Culture>
@@ -79,7 +79,7 @@
     </Bscmake>
     <Lib>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Unicode_Release\Interfaces.lib</OutputFile>
+      <OutputFile>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Release\Interfaces.lib</OutputFile>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">
@@ -93,10 +93,10 @@
       <MinimalRebuild>true</MinimalRebuild>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <PreprocessorDefinitions>_DEBUG;WIN32;_WINDOWS;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AssemblerListingLocation>.\Unicode_Debug\</AssemblerListingLocation>
+      <AssemblerListingLocation>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Debug\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Unicode_Debug\Interfaces.pch</PrecompiledHeaderOutputFile>
-      <ObjectFileName>.\Unicode_Debug\</ObjectFileName>
-      <ProgramDataBaseFileName>.\Unicode_Debug\</ProgramDataBaseFileName>
+      <ObjectFileName>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Debug\</ObjectFileName>
+      <ProgramDataBaseFileName>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Debug\</ProgramDataBaseFileName>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
     </ClCompile>
     <ResourceCompile>
@@ -109,7 +109,7 @@
     </Bscmake>
     <Lib>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Unicode_Debug\Interfaces.lib</OutputFile>
+      <OutputFile>$(SolutionDir)..\Core\$(ProjectName)\Unicode_Debug\Interfaces.lib</OutputFile>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
