Fix missed duplicate menu edit

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -3750,34 +3750,31 @@ BEGIN
             MENUITEM "&Add Time to Task Log File",  ID_ADDTIMETOLOGFILE
             MENUITEM SEPARATOR
             MENUITEM "&Offset Task Dates...",       ID_EDIT_OFFSETDATES
-            POPUP "O&ffset Task Dates"
+            POPUP "O&ffset Task Dates Forwards By"
             BEGIN
-                POPUP "&Forwards By"
-                BEGIN
-                    MENUITEM "One Day",                     ID_OFFSETDATES_FORWARDSBY_ONEDAY
+                MENUITEM "One Day",                     ID_OFFSETDATES_FORWARDSBY_ONEDAY
 
-                    MENUITEM "One Weekday",                 ID_OFFSETDATES_FORWARDSBY_ONEWEEKDAY
+                MENUITEM "One Weekday",                 ID_OFFSETDATES_FORWARDSBY_ONEWEEKDAY
 
-                    MENUITEM "One Week",                    ID_OFFSETDATES_FORWARDSBY_ONEWEEK
+                MENUITEM "One Week",                    ID_OFFSETDATES_FORWARDSBY_ONEWEEK
 
-                    MENUITEM "One Month",                   ID_OFFSETDATES_FORWARDSBY_ONEMONTH
+                MENUITEM "One Month",                   ID_OFFSETDATES_FORWARDSBY_ONEMONTH
 
-                    MENUITEM "One Year",                    ID_OFFSETDATES_FORWARDSBY_ONEYEAR
+                MENUITEM "One Year",                    ID_OFFSETDATES_FORWARDSBY_ONEYEAR
 
-                END
-                POPUP "&Backwards By"
-                BEGIN
-                    MENUITEM "One Day",                     ID_OFFSETDATES_BACKWARDSBY_ONEDAY
+            END
+            POPUP "O&ffset Task Dates Backwards By"
+            BEGIN
+                MENUITEM "One Day",                     ID_OFFSETDATES_BACKWARDSBY_ONEDAY
 
-                    MENUITEM "One Weekday",                 ID_OFFSETDATES_BACKWARDSBY_ONEWEEKDAY
+                MENUITEM "One Weekday",                 ID_OFFSETDATES_BACKWARDSBY_ONEWEEKDAY
 
-                    MENUITEM "One Week",                    ID_OFFSETDATES_BACKWARDSBY_ONEWEEK
+                MENUITEM "One Week",                    ID_OFFSETDATES_BACKWARDSBY_ONEWEEK
 
-                    MENUITEM "One Month",                   ID_OFFSETDATES_BACKWARDSBY_ONEMONTH
+                MENUITEM "One Month",                   ID_OFFSETDATES_BACKWARDSBY_ONEMONTH
 
-                    MENUITEM "One Year",                    ID_OFFSETDATES_BACKWARDSBY_ONEYEAR
+                MENUITEM "One Year",                    ID_OFFSETDATES_BACKWARDSBY_ONEYEAR
 
-                END
             END
             MENUITEM SEPARATOR
             MENUITEM "Add Task File &Link...",      ID_EDIT_SETFILEREF
