--- a/Core/BurndownExt/BurndownExt.vcxproj
+++ b/Core/BurndownExt/BurndownExt.vcxproj
@@ -174,7 +174,7 @@ copy unicode_debug\burndownext.dll ..\todolist\unicode_debug /y
     <ClCompile Include="BurndownGraphs.cpp" />
     <ClCompile Include="BurndownPreferencesDlg.cpp" />
     <ClCompile Include="BurndownStruct.cpp" />
-    <ClCompile Include="BurndownTrendComboBox.cpp" />
+    <ClCompile Include="BurndownOptionsComboBox.cpp" />
     <ClCompile Include="BurndownWnd.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -210,7 +210,7 @@ copy unicode_debug\burndownext.dll ..\todolist\unicode_debug /y
     <ClInclude Include="BurndownPreferencesDlg.h" />
     <ClInclude Include="BurndownStatic.h" />
     <ClInclude Include="BurndownStruct.h" />
-    <ClInclude Include="BurndownTrendComboBox.h" />
+    <ClInclude Include="BurndownOptionsComboBox.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="BurndownExt.h" />
     <ClInclude Include="BurndownWnd.h" />
