--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -1791,7 +1791,8 @@ BEGIN
                     LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,312,224
     PUSHBUTTON      "Move &Up",IDC_MOVEUP,328,7,59,14
     PUSHBUTTON      "Move &Down",IDC_MOVEDOWN,328,26,59,14
-    PUSHBUTTON      "Delete",IDC_DELETE,328,52,59,14
+    PUSHBUTTON      "D&uplicate",IDC_DUPLICATE,328,45,59,14
+    PUSHBUTTON      "Delete",IDC_DELETE,328,86,59,14
 END
 
 IDD_ABOUT_DIALOG DIALOG DISCARDABLE  0, 0, 332, 238
