Implement basic pie chart rendering

--- a/Core/_Future Ideas/Burndown Pie Charts/BurndownExt.rc
+++ b/Core/_Future Ideas/Burndown Pie Charts/BurndownExt.rc
@@ -276,6 +276,7 @@ BEGIN
     IDS_FREQUENCY_BAR       "Bar Style"
     IDS_FREQUENCY_PIE       "Pie Style"
     IDS_FREQUENCY_LINE      "Line Style"
+    IDS_FREQUENCY_DONUT     "Doughnut Style"
 END
 
 STRINGTABLE DISCARDABLE 
