--- a/Core/BurndownExt/BurndownExt.rc
+++ b/Core/BurndownExt/BurndownExt.rc
@@ -158,16 +158,15 @@ BEGIN
                     WS_TABSTOP
 END
 
-IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 106
+IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 182
 STYLE WS_CHILD
 FONT 8, "Tahoma"
 BEGIN
+    LTEXT           "&Graph colours",IDC_STATIC,7,6,223,8
     CONTROL         "List1",IDC_GRAPHCOLORS,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_OWNERDRAWFIXED | 
-                    LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | NOT WS_VISIBLE | 
-                    WS_DISABLED | WS_BORDER | WS_TABSTOP,7,18,266,68
-    LTEXT           "&Graph content colours",IDC_STATIC,7,7,223,8,NOT 
-                    WS_VISIBLE | WS_DISABLED
+                    LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | 
+                    WS_TABSTOP,7,18,333,157
 END
 
 IDD_PREFERENCES_DIALOG DIALOG DISCARDABLE  0, 0, 373, 223
@@ -198,8 +197,8 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 340
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 99
+        TOPMARGIN, 6
+        BOTTOMMARGIN, 175
     END
 
     IDD_PREFERENCES_DIALOG, DIALOG
@@ -228,6 +227,8 @@ IDR_TOOLBAR             BITMAP  MOVEABLE PURE   "res\\toolbar.bmp"
 
 IDR_TOOLBAR TOOLBAR MOVEABLE PURE  16, 15
 BEGIN
+    BUTTON      ID_BURNDOWN_PREF
+    SEPARATOR
     BUTTON      ID_HELP
 END
 
