Refactor graph drawing into separate methods (future)

--- a/Core/_Future Ideas/Burndown Pie Charts/BurndownExt.rc
+++ b/Core/_Future Ideas/Burndown Pie Charts/BurndownExt.rc
@@ -158,15 +158,15 @@ BEGIN
                     WS_TABSTOP
 END
 
-IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 182
+IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 358, 182
 STYLE WS_CHILD
 FONT 8, "Tahoma"
 BEGIN
-    LTEXT           "&Graph colours",IDC_STATIC,7,6,223,8
+    LTEXT           "&Graph colours",IDC_COLORSLABEL,7,6,223,8
     CONTROL         "List1",IDC_GRAPHCOLORS,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_OWNERDRAWFIXED | 
                     LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | 
-                    WS_TABSTOP,7,18,333,157
+                    WS_TABSTOP,7,18,344,157
 END
 
 IDD_PREFERENCES_DIALOG DIALOG DISCARDABLE  0, 0, 373, 223
@@ -196,7 +196,7 @@ BEGIN
     IDD_PREFERENCES_PAGE, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 340
+        RIGHTMARGIN, 351
         TOPMARGIN, 6
         BOTTOMMARGIN, 175
     END
