Fix missing Ctrl ID

--- a/Core/BurndownExt/BurndownExt.rc
+++ b/Core/BurndownExt/BurndownExt.rc
@@ -162,7 +162,7 @@ IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 182
 STYLE WS_CHILD
 FONT 8, "Tahoma"
 BEGIN
-    LTEXT           "&Graph colours",IDC_STATIC,7,6,223,8
+    LTEXT           "&Graph colours",IDC_COLORSLABEL,7,6,223,8
     CONTROL         "List1",IDC_GRAPHCOLORS,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_OWNERDRAWFIXED | 
                     LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | 
