--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -5699,6 +5699,7 @@ BEGIN
     IDS_MSVCR100_MSG        "System File Required|ToDoList requires the 'Microsoft Visual C++ 2010 SP1 Redistributable Package' to be installed.\n\nClick 'OK' to visit the appropriate download page or 'Cancel' to quit."
     IDS_CUSTOM_FEATURE_ONEDECIMAL "One decimal place"
     IDS_FP_IS_COMPLETE      "is completed (or not set)"
+    IDS_TDC_GROUPBY         "Group by"
 END
 
 STRINGTABLE DISCARDABLE 
