--- a/Core/GanttChartExt/GanttChartExt.vcxproj
+++ b/Core/GanttChartExt/GanttChartExt.vcxproj
@@ -174,6 +174,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <ClCompile Include="GanttDateRangeSlider.cpp" />
+    <ClCompile Include="GanttDisplayComboBox.cpp" />
     <ClCompile Include="GanttPreferencesDlg.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -213,6 +214,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
     <ClInclude Include="GanttChartWnd.h" />
     <ClInclude Include="GanttCreateDependsDlg.h" />
     <ClInclude Include="GanttDateRangeSlider.h" />
+    <ClInclude Include="GanttDisplayComboBox.h" />
     <ClInclude Include="GanttEnum.h" />
     <ClInclude Include="GanttMsg.h" />
     <ClInclude Include="GanttPreferencesDlg.h" />
