Refactor snap modes into separate class

--- a/Core/GanttChartExt/GanttChartExt.vcxproj.filters
+++ b/Core/GanttChartExt/GanttChartExt.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="GanttDisplayComboBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GanttSnapComboBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\GanttChartExt.rc2">
@@ -109,6 +112,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GanttDisplayComboBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GanttSnapComboBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
