--- a/Core/GanttChartExt/GanttChartExt.vcxproj
+++ b/Core/GanttChartExt/GanttChartExt.vcxproj
@@ -179,6 +179,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="GanttSnapComboBox.cpp" />
     <ClCompile Include="GanttStatic.cpp" />
     <ClCompile Include="GanttStruct.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -218,6 +219,7 @@ copy unicode_debug\GanttChartExt.dll ..\todolist\unicode_debug /y
     <ClInclude Include="GanttEnum.h" />
     <ClInclude Include="GanttMsg.h" />
     <ClInclude Include="GanttPreferencesDlg.h" />
+    <ClInclude Include="GanttSnapComboBox.h" />
     <ClInclude Include="GanttStatic.h" />
     <ClInclude Include="GanttStruct.h" />
     <ClInclude Include="GanttCtrl.h" />
