Add support for disabled display modes

--- a/Core/GanttChartExt/GanttChartExt.rc
+++ b/Core/GanttChartExt/GanttChartExt.rc
@@ -418,6 +418,7 @@ BEGIN
     IDS_ATTRIB_DONEDATE     "Completion Date"
     IDS_COL_DONEDATE        "Completed"
     IDS_ACTIVEDATERANGE     "&Visible Date Range (%s)"
+    IDS_DISPLAYHINT         "(Reduce visible date range)"
 END
 
 #endif    // English (Australia) resources
