Add debug command to restart application

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -3593,6 +3593,7 @@ BEGIN
     POPUP "Debug"
     BEGIN
         MENUITEM "&End Session",                ID_DEBUGENDSESSION
+        MENUITEM "Restart Application",         ID_DEBUGRESTARTAPP
         MENUITEM SEPARATOR
         MENUITEM "Update &Translation",         ID_DEBUG_UPDATETRANSLATION
         MENUITEM "&Clean Dictionaries",         ID_DEBUG_CLEANDICTIONARIES
