Replace '&&' with 'and'

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -3117,7 +3117,7 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Insert &Date",                ID_EDIT_INSERTDATE
         MENUITEM "Insert Ti&me",                ID_EDIT_INSERTTIME
-        MENUITEM "&Insert Date && Time",        ID_EDIT_INSERTDATETIME
+        MENUITEM "&Insert Date and Time",       ID_EDIT_INSERTDATETIME
         MENUITEM SEPARATOR
         POPUP "Spell Chec&k"
         BEGIN
@@ -5114,7 +5114,7 @@ END
 STRINGTABLE DISCARDABLE 
 BEGIN
     ID_HELP_WIKI            "\nOnline Help"
-    ID_EDIT_INSERTDATETIME  "\nInsert Date & Time"
+    ID_EDIT_INSERTDATETIME  "\nInsert Date and Time"
 END
 
 STRINGTABLE DISCARDABLE 
