--- a/Plugins/3rdParty/ReoGridEditorControl/ReoGridEditorControl.csproj
+++ b/Plugins/3rdParty/ReoGridEditorControl/ReoGridEditorControl.csproj
@@ -34,7 +34,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;EX_SCRIPT;RG_DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;RG_DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -78,13 +78,6 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="unvell.ReoScript, Version=1.5.0.0, Culture=neutral, PublicKeyToken=85339a558a3a0c58, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Ref\unvell.ReoScript.dll</HintPath>
-    </Reference>
-    <Reference Include="unvell.ReoScript.EditorLib">
-      <HintPath>..\Ref\unvell.ReoScript.EditorLib.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
