Add initial theme support to spreadsheet plugin

--- a/Plugins/ContentControl/SpreadsheetContentControl/SpreadsheetContentControlCore/SpreadsheetContentControlCore.csproj
+++ b/Plugins/ContentControl/SpreadsheetContentControl/SpreadsheetContentControlCore/SpreadsheetContentControlCore.csproj
@@ -58,6 +58,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDLGridEditorControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SpreadsheetContentControlCore.resx">
