VS auto modification

--- a/Plugins/3rdParty/ReoGrid/ReoGrid.csproj
+++ b/Plugins/3rdParty/ReoGrid/ReoGrid.csproj
@@ -399,7 +399,9 @@
     <Compile Include="Actions\RemoveRangeStyleAction.cs" />
     <Compile Include="Actions\StepRangeFontSizeAction.cs" />
     <Compile Include="Actions\RemoveRowsAction.cs" />
-    <Compile Include="Test\RichTextTestForm.cs" />
+    <Compile Include="Test\RichTextTestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Test\RichTextTestForm.Designer.cs">
       <DependentUpon>RichTextTestForm.cs</DependentUpon>
     </Compile>
@@ -470,7 +472,9 @@
     <Compile Include="Views\CellsViewport.cs" />
     <Compile Include="WinForm\Graphics.cs" />
     <Compile Include="Views\NormalViewportController.cs" />
-    <Compile Include="WinForm\FormulaParserForm.cs" />
+    <Compile Include="WinForm\FormulaParserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="WinForm\FormulaParserForm.designer.cs">
       <DependentUpon>FormulaParserForm.cs</DependentUpon>
     </Compile>
