--- a/Core/TDLTest/TDLTest.vcxproj
+++ b/Core/TDLTest/TDLTest.vcxproj
@@ -79,7 +79,7 @@
       <Culture>0x0c09</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>..\ToDoList\Unicode_Release\ToDoList.lib</AdditionalDependencies>
+      <AdditionalDependencies>..\ToDoList\Unicode_Release\ToDoListLib.lib</AdditionalDependencies>
       <OutputFile>.\Unicode_Release/TDLTest.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <ProgramDatabaseFile>.\Unicode_Release/TDLTest.pdb</ProgramDatabaseFile>
@@ -127,7 +127,7 @@ copy unicode_release\TDLTest.exe ..\todolist\unicode_release /y
       <Culture>0x0c09</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>..\ToDoList\Unicode_Debug/ToDoList.lib</AdditionalDependencies>
+      <AdditionalDependencies>..\ToDoList\Unicode_Debug/ToDoListLib.lib</AdditionalDependencies>
       <OutputFile>.\Unicode_Debug/TDLTest.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
