Add initial tests for remapping menu IDs

--- a/Core/TDLTest/TDLTest.vcxproj.filters
+++ b/Core/TDLTest/TDLTest.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="ToDoCtrlTaskLinkTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RemapMenuIDsTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImportExportMgrTest.h">
@@ -73,6 +76,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ToDoCtrlTaskLinkTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RemapMenuIDsTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
